eks-multicluster/dr-dist.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 1
    loadBalancer:
      simple: ROUND_ROBIN
      localityLbSetting:
        enabled: true
        # failover:
        #   - from: us-west-1
        #     to: us-west-2
        distribute:
        - from: us-west-1/*
          to:
            "us-west-1/*": 70
            "us-west-2/*": 30
        - from: us-west-2/*
          to:
            "us-west-1/*": 30
            "us-west-2/*": 70
        # https://github.com/fluxcd/flagger/blob/main/pkg/apis/istio/v1alpha3/destination_rule.go#L331
        # failoverPriority:
        #   - "topology.istio.io/network"
        #   - "topology.kubernetes.io/region"
        #   - "topology.kubernetes.io/zone"
        #   - "topology.istio.io/subzone"
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 1m
